--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "gpio": "^0.2.10",
+    "i2c-bus": "^5.2.0",
+    "log4js": "^6.2.1"
   }
 }
