--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.1",
+    "axios": "^0.21.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "gpio": "^0.2.10",
-    "i2c-bus": "^5.2.0",
-    "log4js": "^6.2.1"
+    "i2c-bus": "^5.2.1",
+    "influx": "^5.6.3",
+    "log4js": "^6.3.0"
   }
 }
